--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "es-toolkit": "^1.40.0",
     "express": "^5.1.0",
+    "firebase": "^12.4.0",
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.5",
     "react": "^19.1.1",
