--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.2",
+    "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
